--- a/css/eventSlider.css
+++ b/css/eventSlider.css
@@ -15,6 +15,7 @@
     height: 100%;
     position: absolute;
     background: #f75a8c;
+    z-index: 9;
     left: 0;
     padding-left: 5%;
     color: #fff;
@@ -23,6 +24,7 @@
     align-items: flex-start;
     flex-direction: column;
     gap: 30px;
+    /* padding-top: 50px; */
     animation-name: slide;
     animation-duration: 1.5s;
     animation-timing-function: ease-in-out;
@@ -47,7 +49,7 @@
     /* text-align: center; */
 }
 
-img {
+.mySlides .slideImg {
     width: 50%;
     height: 100%;
     position: absolute;
@@ -75,13 +77,54 @@ img {
 .details .book-btn:hover {
     transform: scale(1.05);
 }
-.details .logo{
+
+.details .logo {
+    position: relative;
+}
+
+.details .logo img {
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    position: absolute;
-    top: 12%;
-    left: 9.5%;
+}
+
+@media (max-width:425px) {
+    .mySlides {
+        /* display: flex; */
+
+    }
+
+    .mySlides .details {
+        /* width: 100%;
+        height: 50%;
+        flex-direction: column;
+        justify-content: center; */
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        /* background: #f75a8c; */
+        top: 0;
+        padding-left: 5%;
+        color: #fff;
+        display: flex;
+        justify-content: center;
+        align-items: flex-start;
+        flex-direction: column;
+        /* text-align: center; */
+        /* gap: 30px; */
+    }
+
+    .mySlides .slideImg {
+        display: none;
+        /* width: 100%;
+        height: 40%;
+        position: absolute;
+        bottom: 0;
+        object-fit: cover;
+        object-position: center;
+        vertical-align: middle; */
+        /* flex-direction: column; */
+    }
 }
 
 /* .fade {
